fix: 외부 API에서 중복되는 데이터를 가져왔을 때 중복된 공휴일이 저장되지 않게 Set 적용